--- a/src/app/playgrounds/template-forms/template-forms-page/template-forms-page.component.html
+++ b/src/app/playgrounds/template-forms/template-forms-page/template-forms-page.component.html
@@ -1,16 +1,15 @@
 <form
   #form="ngForm"
   class="form"
-  (ngSubmit)="onSubmitForm(form, $event)"
-  [ngFormOptions]="{ updateOn: 'blur' }">
-  <p>Form model state</p>
-  <pre>{{userInfo | json}}</pre>
+  (ngSubmit)="onSubmitForm(form, $event)">
 
   <div class="form-field">
     <label for="name">First Name</label>
     <input
       [(ngModel)]="userInfo.firstName"
-      [ngModelOptions]="{ name: 'first-name', updateOn: 'change' }"
+      required
+      minlength="2"
+      name="first-name"
       type="text"
       id="name"
       placeholder="Enter your name">
@@ -18,60 +17,101 @@
 
   <div class="form-field">
     <label for="last-name">Last Name</label>
-    <input [(ngModel)]="userInfo.lastName" name="last-name" type="text"
-      id="last-name" placeholder="Enter your last name">
+    <input
+      [(ngModel)]="userInfo.lastName"
+      required
+      minlength="2"
+      name="last-name"
+      type="text"
+      id="last-name"
+      placeholder="Enter your last name">
   </div>
 
   <div class="form-field">
     <label for="nick-name">Nick Name</label>
-    <input [(ngModel)]="userInfo.nickname" name="nickname" type="text"
-      id="nick-name" placeholder="Come up with a nick name">
+    <input
+      [(ngModel)]="userInfo.nickname"
+      minlength="3"
+      pattern="^[\w.]+$"
+      name="nickname"
+      type="text"
+      id="nick-name"
+      placeholder="Come up with a nick name">
   </div>
 
   <div class="form-field">
     <label for="email">Email</label>
-    <input [(ngModel)]="userInfo.email" name="email" type="email" id="email"
+    <input
+      [(ngModel)]="userInfo.email"
+      email
+      name="email"
+      type="email"
+      id="email"
       placeholder="Provide your email">
   </div>
 
   <div class="form-field-inline-group">
     <div class="form-field form-field--small">
       <label for="year-of-birth">Year of birth</label>
-      <select id="year-of-birth" [(ngModel)]="userInfo.yearOfBirth"
+      <select
+        required
+        id="year-of-birth"
+        [(ngModel)]="userInfo.yearOfBirth"
         name="year-of-birth">
+
         <option *ngFor="let year of years" [value]="year">{{year}}</option>
       </select>
     </div>
 
     <div class="form-field form-field--small">
       <label for="passport">Passport Number</label>
-      <input [(ngModel)]="userInfo.passport" name="passport" type="text"
-        id="passport" placeholder="Provide Passport Data">
+      <input
+        [(ngModel)]="userInfo.passport"
+        pattern="^[A-Z]{2}[0-9]{6}$"
+        name="passport"
+        type="text"
+        id="passport"
+        placeholder="Provide Passport Data">
     </div>
   </div>
 
-  <fieldset>
+  <fieldset ngModelGroup="address">
     <legend>Address</legend>
 
     <div class="form-field">
       <label for="full-address">Full Adress</label>
-      <input [(ngModel)]="userInfo.fullAddress" name="full-address" type="text"
-        type="text" id="full-address"
+      <input
+        [(ngModel)]="userInfo.fullAddress"
+        required
+        name="full-address"
+        type="text"
+        type="text"
+        id="full-address"
         placeholder="Street name and house number">
     </div>
 
     <div class="form-field">
       <label for="city">City</label>
-      <input [(ngModel)]="userInfo.city" name="city" type="text" id="city"
+      <input
+        [(ngModel)]="userInfo.city"
+        required
+        name="city"
+        type="text"
+        id="city"
         placeholder="City">
     </div>
 
     <div class="form-field">
       <label for="post-code">Post Code</label>
-      <input [(ngModel)]="userInfo.postCode" name="post-code" type="number"
-        id="post-code" placeholder="Post code">
+      <input
+        [(ngModel)]="userInfo.postCode"
+        required
+        name="post-code"
+        type="number"
+        id="post-code"
+        placeholder="Post code">
     </div>
   </fieldset>
 
-  <button>Save</button>
+  <button [disabled]="form.invalid">Save</button>
 </form>
