--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,8 @@
   --color-accent: #ff8888;
   --color-accent-secondary: #ffc15a;
   --color-accent-secondary-darker: #faa415;
+  --color-success: #4caf50;
+  --color-error: #ff5722;
   --color-background: #eceff1;
   --color-text: #263238;
   --color-text-light: #607d8b;
@@ -84,4 +86,18 @@ input, button, select {
 
 select {
   width: 100%;
+}
+
+.ng-valid.ng-dirty:not([ngModelGroup]):not(form) {
+  border: 1px solid var(--color-success);
+}
+
+.ng-invalid.ng-dirty:not([ngModelGroup]):not(form) {
+  border: 1px solid var(--color-error);
+}
+
+button[disabled] {
+  background-color: rgba(0, 0, 0, 0.15);
+  border-color: rgba(0, 0, 0, 0.1);
+  pointer-events: none;
 }
