--- a/src/styles.scss
+++ b/src/styles.scss
@@ -62,12 +62,19 @@ button {
   color: var(--color-text);
   font-weight: bold;
   cursor: pointer;
+
   &:hover {
     opacity: 0.8;
   }
+
   &:active {
     background-color: var(--color-accent-secondary-darker);
     border: var(--color-accent-secondary) 1px solid;
+  }
+
+  &.reset-button {
+    background-color: transparent;
+    border: var(--color-primary) 1px solid;
   }
 }
 
