Apply build-in validators to the rest of the controls

--- a/src/app/playgrounds/reactive-forms/reactive-forms-page/reactive-forms-page.component.html
+++ b/src/app/playgrounds/reactive-forms/reactive-forms-page/reactive-forms-page.component.html
@@ -88,7 +88,7 @@
     </ng-container>
   </fieldset>
 
-  <button>Save</button>
+  <button [disabled]="form.invalid">Save</button>
 </form>
 
 <ng-template #loading>
