--- a/src/styles.scss
+++ b/src/styles.scss
@@ -106,7 +106,12 @@ select {
   border: 2px solid var(--color-success);
 }
 
-.ng-invalid.ng-dirty:not([ngModelGroup="address"]):not(form) {
+//Template driven
+// .ng-invalid.ng-dirty:not([ngModelGroup="address"]):not(form) {
+//   border: 2px solid var(--color-error);
+// }
+
+.ng-invalid.ng-dirty:not([formGroupName]):not([formArrayName]):not([ngModelGroup="address"]):not(form) {
   border: 2px solid var(--color-error);
 }
 
