--- a/src/app/playgrounds/reactive-forms/reactive-forms-page/reactive-forms-page.component.html
+++ b/src/app/playgrounds/reactive-forms/reactive-forms-page/reactive-forms-page.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" (ngSubmit)="onSubmit($event)" class="form">
+<form [formGroup]="form" (reset)="onReset($event)" (ngSubmit)="onSubmit($event)" class="form">
   <div class="form-field">
     <label for="name">First Name</label>
 
@@ -249,6 +249,7 @@
   </fieldset>
 
   <button [disabled]="form.invalid || form.pending">Save</button>
+  <button class="reset-button" type="reset" [disabled]="form.pristine">Reset</button>
 </form>
 
 <ng-template #loading>
