--- a/src/styles.scss
+++ b/src/styles.scss
@@ -102,7 +102,7 @@ select {
   width: 100%;
 }
 
-.ng-valid.ng-dirty:not([ngModelGroup]):not([formGroupName]):not([formArrayName]):not(form) {
+.ng-valid.ng-dirty:not([ngModelGroup]):not([formGroupName]):not([formArrayName]):not(form):not(paper-textarea) {
   border: 2px solid var(--color-success);
 }
 
@@ -148,5 +148,29 @@ button[disabled] {
   to {
     opacity: 1;
     transform: translateY(0px);
+  }
+}
+
+.review-textarea {
+  border-radius: var(--border-radius);
+  background-color: white;
+  padding: calc(var(--spacing-step) * 2);
+  margin-top: var(--spacing-step);
+  min-height: 74px;
+  box-sizing: border-box;
+  
+  h4 {
+    margin-bottom: var(--spacing-step);
+    &:empty:before {
+      content: attr(data-placeholder);
+      opacity: 0.6;
+    }
+  }
+  
+  p, div {
+    &:empty:before {
+      content: attr(data-placeholder);
+      opacity: 0.6;
+    }
   }
 }
