--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -4,8 +4,8 @@
   <div class="nav">
     <a class="nav-link" routerLinkActive="active" routerLink="/template-forms" >Template-Driven Forms</a>
     <a class="nav-link" routerLinkActive="active" routerLink="/reactive-forms">Reactive Forms</a>
-    <a class="nav-link" routerLinkActive="active" routerLink="/custom-rating-picker" [routerLinkActiveOptions]="{ exact:true }">Custom Rating Picker</a>
-    <a class="nav-link" routerLinkActive="active" routerLink="/custom-select">Custom Select</a>
+    <a class="nav-link" routerLinkActive="active" routerLink="/custom-rating-picker">Custom Rating Picker</a>
+    <a class="nav-link" routerLinkActive="active" routerLink="/custom-select" [routerLinkActiveOptions]="{ exact:true }">Custom Select</a>
     <a class="nav-link" routerLinkActive="active" routerLink="/dynamic-forms">Dynamic Forms</a>
   </div>
 
