--- a/src/app/custom-form-control/option/option.component.html
+++ b/src/app/custom-form-control/option/option.component.html
@@ -1,3 +1,7 @@
 <div class="option-content">
   <ng-content></ng-content>
 </div>
+
+<div *ngIf="disabled" class="disabled-reason">
+  {{ disabledReason}}
+</div>
