--- a/src/app/playgrounds/custom-select/custom-select.component.html
+++ b/src/app/playgrounds/custom-select/custom-select.component.html
@@ -1,6 +1,11 @@
-<app-select label="Pick the User">
+<app-select value="niels" label="Pick the User">
   <app-option value="albert">Albert</app-option>
   <app-option value="niels">Niels Bohr</app-option>
   <app-option value="marie">Marie Curie</app-option>
-  <app-option value="isaac">Isaac Newton</app-option>
+  <app-option
+    disabledReason="Too Smart"
+    [disabled]="true"
+    value="isaac">
+    Isaac Newton
+  </app-option>
 </app-select>
