--- a/src/app/playgrounds/custom-select/custom-select.component.html
+++ b/src/app/playgrounds/custom-select/custom-select.component.html
@@ -1,8 +1,9 @@
 <app-select
   (selectionChanged)="onSelectionChanged($event)"
+  [displayWith]="displayWithFn"
   [value]="selectValue"
   label="Pick the User">
-  <app-option *ngFor="let user of users" [value]="user.name">
+  <app-option *ngFor="let user of users" [value]="user">
     {{user.name}}
   </app-option>
 </app-select>
