Implementing Multi-Selection Feature

--- a/src/app/playgrounds/custom-select/custom-select.component.html
+++ b/src/app/playgrounds/custom-select/custom-select.component.html
@@ -1,11 +1,12 @@
 <app-select
+  label="Pick the User"
+  multiple="true"
   (selectionChanged)="onSelectionChanged($event)"
   [compareWith]="compareWithFn"
   [displayWith]="displayWithFn"
-  [value]="selectValue"
-  label="Pick the User">
-  <app-option 
-    *ngFor="let user of users" 
+  [value]="selectValue">
+  <app-option
+    *ngFor="let user of users"
     [value]="user">
     {{user.name}}
   </app-option>
