--- a/src/app/custom-form-control/select/select.component.html
+++ b/src/app/custom-form-control/select/select.component.html
@@ -1,7 +1,10 @@
 <div class="label">{{ label }}</div>
 
 <div class="control" cdkOverlayOrigin #origin="cdkOverlayOrigin">
-  <span class="selected-value" [ngClass]="{ empty: !value }">{{ displayValue || 'Nothing is selected...' }}</span>
+  <span class="selected-value" [ngClass]="{ empty: !value }">
+    {{ displayValue || 'Nothing is selected...' }}
+  </span>
+  <button *ngIf="value" (click)="clearSelection($event)" class="clear-button">clear</button>
   <span class="drop-down-icon">👇</span>
 </div>
 
