--- a/src/app/custom-form-control/select/select.component.scss
+++ b/src/app/custom-form-control/select/select.component.scss
@@ -51,3 +51,19 @@
   transform-origin: top;
   min-height: 150px;
 }
+
+.clear-button {
+  font-size: 10px;
+  background-color: transparent;
+  padding: 1px 3px;
+  border: none;
+  width: 40px;
+  margin: 0 3px;
+  font-weight: 300;
+  opacity: 0.7;
+
+  &:hover {
+    background-color: var(--color-background-darker, "#cfd8dc");
+    opacity: 1;
+  }
+}
