--- a/src/app/custom-form-control/select/select.component.html
+++ b/src/app/custom-form-control/select/select.component.html
@@ -1,10 +1,21 @@
 <div class="label">{{ label }}</div>
 
 <div class="control" cdkOverlayOrigin #origin="cdkOverlayOrigin">
-  <span class="selected-value" [ngClass]="{ empty: !value }">
-    {{ displayValue || 'Nothing is selected...' }}
-  </span>
-  <button *ngIf="value" (click)="clearSelection($event)" class="clear-button">clear</button>
+  <ng-container [ngSwitch]="searchable && isOpen">
+    <input 
+      #input 
+      *ngSwitchCase="true" 
+      (input)="onHandleInput($event)" 
+      class="select-search" 
+      placeholder="Start typing...">
+
+    <span *ngSwitchCase="false" class="selected-value" [ngClass]="{ empty: !value }">
+      {{ displayValue || 'Nothing is selected...' }}
+    </span>
+  </ng-container>
+
+  <button *ngIf="value" (click)="clearSelection($event)"
+    class="clear-button">clear</button>
   <span class="drop-down-icon">👇</span>
 </div>
 
@@ -18,7 +29,8 @@
   cdkConnectedOverlayBackdropClass="cdk-overlay-transparent-backdrop"
   (backdropClick)="close()"
   (detach)="close()">
-  <div class="panel" [@dropDown] (@dropDown.done)="onPanelAnimationDone($event)">
+  <div class="panel" [@dropDown]
+    (@dropDown.done)="onPanelAnimationDone($event)">
     <ng-content></ng-content>
   </div>
 </ng-template>
