Implementing of the DISABLED state for the Select Component

--- a/src/app/custom-form-control/select/select.component.scss
+++ b/src/app/custom-form-control/select/select.component.scss
@@ -23,6 +23,12 @@
     position: relative;
     z-index: 1001;
   }
+
+  &.disabled {
+    opacity: 0.5;
+    pointer-events: none;
+    user-select: none;
+  }
 }
 
 .label {
