--- a/src/app/playgrounds/custom-select/custom-select.component.html
+++ b/src/app/playgrounds/custom-select/custom-select.component.html
@@ -5,6 +5,7 @@
   [compareWith]="compareWithFn"
   [displayWith]="displayWithFn"
   [value]="selectValue"
+  [disabled]="true"
   (selectionChanged)="onSelectionChanged($event)"
   (closed)="onSearchChanged('')"
   (searchChanged)="onSearchChanged($event)">
