Implementing Control Value Accessor Pt. 2

--- a/src/app/playgrounds/custom-select/custom-select.component.html
+++ b/src/app/playgrounds/custom-select/custom-select.component.html
@@ -4,9 +4,7 @@
   [searchable]="true"
   [compareWith]="compareWithFn"
   [displayWith]="displayWithFn"
-  [value]="selectValue"
-  [disabled]="true"
-  (selectionChanged)="onSelectionChanged($event)"
+  [formControl]="selectValue"
   (closed)="onSearchChanged('')"
   (searchChanged)="onSearchChanged($event)">
   <app-option
