Creating Basic Layout for the Playground

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -5,8 +5,8 @@
     <a class="nav-link" routerLinkActive="active" routerLink="/template-forms" >Template-Driven Forms</a>
     <a class="nav-link" routerLinkActive="active" routerLink="/reactive-forms">Reactive Forms</a>
     <a class="nav-link" routerLinkActive="active" routerLink="/custom-rating-picker">Custom Rating Picker</a>
-    <a class="nav-link" routerLinkActive="active" routerLink="/custom-select" [routerLinkActiveOptions]="{ exact:true }">Custom Select</a>
-    <a class="nav-link" routerLinkActive="active" routerLink="/dynamic-forms">Dynamic Forms</a>
+    <a class="nav-link" routerLinkActive="active" routerLink="/custom-select">Custom Select</a>
+    <a class="nav-link" routerLinkActive="active" routerLink="/dynamic-forms" [routerLinkActiveOptions]="{ exact:true }">Dynamic Forms</a>
   </div>
 
   <!-- <input [(ngModel)]="searchString" (ngModelChange)="findSomething($event)" class="global-search" placeholder="Global search" type="text" /> -->
