--- a/src/app/playgrounds/dynamic-forms-page/dynamic-forms-page.component.html
+++ b/src/app/playgrounds/dynamic-forms-page/dynamic-forms-page.component.html
@@ -39,6 +39,6 @@
       </ng-container>
     </div>
 
-    <button>Save</button>
+    <button [disabled]="form.invalid">Save</button>
   </form>
 </div>
