--- a/src/app/playgrounds/dynamic-forms-page/dynamic-forms-page.component.html
+++ b/src/app/playgrounds/dynamic-forms-page/dynamic-forms-page.component.html
@@ -12,7 +12,8 @@
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
     <h3 class="form-heading">{{formConfig.description}}</h3>
 
-    <div *ngFor="let control of formConfig.controls | keyvalue"
+    <div
+      *ngFor="let control of formConfig.controls | keyvalue"
       class="form-field">
       <label [for]="control.key">{{control.value.label}}</label>
 
@@ -36,6 +37,30 @@
 
           </select>
         </ng-container>
+
+        <div
+          *ngIf="form.get(control.key)?.dirty && form.get(control.key)?.hasError('required')"
+          class="input-error">
+          This field is required
+        </div>
+
+        <div
+          *ngIf="form.get(control.key)?.dirty && form.get(control.key)?.hasError('email')"
+          class="input-error">
+          This must be a valid email
+        </div>
+
+        <div
+          *ngIf="form.get(control.key)?.dirty && form.get(control.key)?.hasError('minlength')"
+          class="input-error">
+          This field must be at least {{form.get(control.key)?.getError('minlength').requiredLength}} characters
+        </div>
+
+        <div
+          *ngIf="form.get(control.key)?.dirty && form.get(control.key)?.hasError('banWords')"
+          class="input-error">
+          This word is not allowed
+        </div>
       </ng-container>
     </div>
 
