--- a/src/app/playgrounds/dynamic-form/dynamic-forms-page/dynamic-forms-page.component.html
+++ b/src/app/playgrounds/dynamic-form/dynamic-forms-page/dynamic-forms-page.component.html
@@ -18,9 +18,10 @@
       <label [for]="control.key">{{control.value.label}}</label>
 
       <ng-container
-        [ngComponentOutlet]="dynamicControlResolver.resolve(control.value.controlType)">
+        [ngComponentOutlet]="dynamicControlResolver.resolve(control.value.controlType)"
+        [ngComponentOutletInjector]="control.key | controlInjector:control.value">
       </ng-container>
-   
+
       <div
         *ngIf="form.get(control.key)?.dirty && form.get(control.key)?.hasError('required')"
         class="input-error">
