--- a/src/app/playgrounds/common-form.scss
+++ b/src/app/playgrounds/common-form.scss
@@ -1,15 +1,21 @@
 .form {
   min-width: 395px;
 }
+
 .form-field {
   width: 100%;
-  height: 93px;
+  height: 90px;
   
   &--small {
     max-width: 48%;
   }
 }
+
 .form-field-inline-group {
   display: flex;
   justify-content: space-between;
+}
+
+.form-heading {
+  margin-bottom: 1rem;
 }
