Bonus: Lazy Loading of Dynamic Controls

--- a/src/app/playgrounds/dynamic-form/dynamic-forms-page/dynamic-forms-page.component.html
+++ b/src/app/playgrounds/dynamic-form/dynamic-forms-page/dynamic-forms-page.component.html
@@ -15,7 +15,7 @@
     <ng-container *ngFor="let control of formConfig.controls | keyvalue">
 
       <ng-container
-        [ngComponentOutlet]="controlResolver.resolve(control.value.controlType)"
+        [ngComponentOutlet]="controlResolver.resolve(control.value.controlType) | async"
         [ngComponentOutletInjector]="control.key | controlInjector:control.value">
       </ng-container>
 
