--- a/src/app/playgrounds/dynamic-form/dynamic-forms-page/dynamic-forms-page.component.html
+++ b/src/app/playgrounds/dynamic-form/dynamic-forms-page/dynamic-forms-page.component.html
@@ -12,7 +12,7 @@
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
     <h3 class="form-heading">{{formConfig.description}}</h3>
 
-    <ng-container *ngFor="let control of formConfig.controls | keyvalue">
+    <ng-container *ngFor="let control of formConfig.controls | keyvalue: comparatorFn">
 
       <ng-container
         [ngComponentOutlet]="controlResolver.resolve(control.value.controlType) | async"
