--- a/src/app/playgrounds/dynamic-form/dynamic-forms-page/dynamic-forms-page.component.html
+++ b/src/app/playgrounds/dynamic-form/dynamic-forms-page/dynamic-forms-page.component.html
@@ -9,10 +9,10 @@
 </div>
 
 <div *ngIf="formConfig$ | async as formConfig" class="dynamic-form-container">
-  <form [formGroup]="form" (ngSubmit)="onSubmit()">
-    <h3 class="form-heading">{{formConfig.description}}</h3>
+  <form [formGroup]="formConfig.form" (ngSubmit)="onSubmit(formConfig.form)">
+    <h3 class="form-heading">{{formConfig.config.description}}</h3>
 
-    <ng-container *ngFor="let control of formConfig.controls | keyvalue: comparatorFn">
+    <ng-container *ngFor="let control of formConfig.config.controls | keyvalue: comparatorFn">
 
       <ng-container
         [ngComponentOutlet]="controlResolver.resolve(control.value.controlType) | async"
@@ -20,32 +20,32 @@
       </ng-container>
 
       <div
-        *ngIf="form.get(control.key)?.dirty && form.get(control.key)?.hasError('required')"
+        *ngIf="formConfig.form.get(control.key)?.dirty && formConfig.form.get(control.key)?.hasError('required')"
         class="input-error">
         This field is required
       </div>
 
       <div
-        *ngIf="form.get(control.key)?.dirty && form.get(control.key)?.hasError('email')"
+        *ngIf="formConfig.form.get(control.key)?.dirty && formConfig.form.get(control.key)?.hasError('email')"
         class="input-error">
         This must be a valid email
       </div>
 
       <div
-        *ngIf="form.get(control.key)?.dirty && form.get(control.key)?.hasError('minlength')"
+        *ngIf="formConfig.form.get(control.key)?.dirty && formConfig.form.get(control.key)?.hasError('minlength')"
         class="input-error">
         This field must be at least
-        {{form.get(control.key)?.getError('minlength').requiredLength}}
+        {{formConfig.form.get(control.key)?.getError('minlength').requiredLength}}
         characters
       </div>
 
       <div
-        *ngIf="form.get(control.key)?.dirty && form.get(control.key)?.hasError('banWords')"
+        *ngIf="formConfig.form.get(control.key)?.dirty && formConfig.form.get(control.key)?.hasError('banWords')"
         class="input-error">
         This word is not allowed
       </div>
     </ng-container>
 
-    <button [disabled]="form.invalid">Save</button>
+    <button [disabled]="formConfig.form.invalid">Save</button>
   </form>
 </div>
